# OpenSource_python

./: .pre-commit-config.yaml  .tests.py.swp  LICENSE  README.md  pyproject.toml  reminder.p  reminder.py  tests.py  tox.ini
.github/workflows/: check.yml
