[tool.poetry]
name = "reminder"
version = "0.1.0"
description = ""
authors = ["KanSri"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
tox = "^4.14.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
